--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -4,8 +4,7 @@
                                                  xmlns:tools="http://schemas.android.com/tools"
                                                  android:id="@+id/coordinator_layout_product"
                                                  android:layout_width="match_parent"
-                                                 android:layout_height="match_parent"
-                                                 android:fitsSystemWindows="true">
+                                                 android:layout_height="match_parent">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -37,131 +36,6 @@
         android:layout_height="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
-    <LinearLayout
-        android:id="@+id/design_bottom_sheet_product_activity"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/grey_100"
-        android:orientation="vertical"
-        app:behavior_hideable="true"
-        app:behavior_peekHeight="0dp"
-        app:layout_behavior="@string/bottom_sheet_behavior">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/green_300"
-            android:contentDescription="@string/app_name"
-            android:gravity="center"
-            android:padding="@dimen/padding_short"
-            android:scaleType="center"
-            android:text="@string/wikidata_information"
-            android:textAlignment="center"
-            android:textColor="@color/white"
-            android:textSize="@dimen/font_large"
-            android:textStyle="bold"/>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <LinearLayout
-                android:id="@+id/titleContainer"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/spacing_tiny"
-                android:background="@color/grey_50"
-                android:gravity="center_vertical|center_horizontal"
-                android:orientation="horizontal"
-                android:padding="@dimen/spacing_small">
-
-                <TextView
-                    android:id="@+id/titleBottomSheet"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_weight="1"
-                    android:gravity="center_vertical"
-                    android:text="@string/title_activity_product"
-                    android:textAlignment="center"
-                    android:textSize="@dimen/font_large"
-                    android:textStyle="bold"/>
-
-                <android.support.v7.widget.AppCompatImageView
-                    android:id="@+id/titleBottomSheetIcon"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:visibility="gone"/>
-            </LinearLayout>
-
-
-            <LinearLayout
-                android:id="@+id/descriptionContainer"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/titleContainer"
-                android:layout_margin="@dimen/spacing_tiny"
-                android:background="@color/grey_50"
-                android:gravity="center_vertical"
-                android:padding="@dimen/spacing_small">
-
-
-                <TextView
-                    android:id="@+id/description"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="@string/description_activity_product"
-                    android:textAlignment="center"
-                    android:textSize="@dimen/font_normal"/>
-            </LinearLayout>
-
-            <include
-                android:id="@+id/exposureEvalTable"
-                layout="@layout/exposure_eval_table"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/descriptionContainer"
-                android:visibility="gone"/>
-
-            <LinearLayout
-                android:id="@+id/buttonsContainer"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/exposureEvalTable"
-                android:layout_marginBottom="@dimen/spacing_small"
-                android:gravity="center_horizontal"
-                android:weightSum="100">
-
-
-                <Button
-                    android:id="@+id/wikipediaButton"
-                    style="@style/ButtonToBrowseProducts"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/spacing_normal"
-                    android:layout_weight="50"
-                    android:background="@color/blue"
-                    android:text="@string/Wikipedia"/>
-
-
-                <Button
-                    android:id="@+id/buttonToBrowseProducts"
-                    style="@style/ButtonToBrowseProducts"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/spacing_normal"
-                    android:layout_weight="50"
-                    android:background="@color/blue"
-                    android:text="@string/Browse_Products"/>
-            </LinearLayout>
-
-
-        </RelativeLayout>
-
-
-    </LinearLayout>
-
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/buttonScan"
         android:layout_width="wrap_content"
@@ -184,8 +58,6 @@
         app:itemIconTint="@drawable/nav_item_state"
         app:itemTextColor="@drawable/nav_item_state"
         app:menu="@menu/my_navigation_items"
-        tools:layout_editor_absoluteY="503dp">
-
-    </android.support.design.widget.BottomNavigationView>
+        tools:layout_editor_absoluteY="503dp"/>
 
 </android.support.design.widget.CoordinatorLayout>
