--- a/app/src/main/res/layout/activity_history_scan.xml
+++ b/app/src/main/res/layout/activity_history_scan.xml
@@ -12,12 +12,19 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/listHistoryScan"
+        <android.support.v4.widget.SwipeRefreshLayout
+            android:id="@+id/srRefreshHistoryScanList"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tools:listitem="@layout/history_list_item"
-            android:layout_margin="@dimen/spacing_normal" />
+            android:layout_height="match_parent">
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/listHistoryScan"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                tools:listitem="@layout/history_list_item"
+                android:layout_margin="@dimen/spacing_normal" />
+
+        </android.support.v4.widget.SwipeRefreshLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -56,6 +63,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:visibility="visible"/>
+
     </FrameLayout>
 
 </LinearLayout>
