--- a/app/src/main/res/layout/images_item.xml
+++ b/app/src/main/res/layout/images_item.xml
@@ -4,14 +4,14 @@
 
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:padding="10dp">
 
     <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/img"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:scaleType="fitXY"
+        android:scaleType="fitCenter"
         android:adjustViewBounds="true"/>
 
     <Button
