--- a/app/src/main/res/layout/fragment_ingredients_product.xml
+++ b/app/src/main/res/layout/fragment_ingredients_product.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.SwipeRefreshLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/swipeRefresh"
     android:layout_width="match_parent"
@@ -47,12 +46,12 @@
                 android:id="@+id/cvTextIngredientProduct"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
                 android:layout_marginTop="16dp"
-                android:layout_marginBottom="8dp"
-                app:cardElevation="4dp"
-                android:visibility="gone">
+                android:visibility="gone"
+                app:cardElevation="4dp">
 
                 <TextView
                     android:id="@+id/textIngredientProduct"
@@ -73,12 +72,12 @@
                 android:id="@+id/cvTextSubstanceProduct"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
                 android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"
-                app:cardElevation="4dp"
-                android:visibility="gone">
+                android:visibility="gone"
+                app:cardElevation="4dp">
 
                 <TextView
                     android:id="@+id/textSubstanceProduct"
@@ -100,12 +99,12 @@
                 android:id="@+id/cvTextTraceProduct"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
                 android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"
-                app:cardElevation="4dp"
-                android:visibility="gone">
+                android:visibility="gone"
+                app:cardElevation="4dp">
 
                 <TextView
                     android:id="@+id/textTraceProduct"
@@ -127,12 +126,12 @@
                 android:id="@+id/cvTextAdditiveProduct"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
                 android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"
-                app:cardElevation="4dp"
-                android:visibility="gone">
+                android:visibility="gone"
+                app:cardElevation="4dp">
 
                 <TextView
                     android:id="@+id/textAdditiveProduct"
@@ -154,12 +153,12 @@
                 android:id="@+id/cvTextPalmOilProduct"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
                 android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"
-                app:cardElevation="4dp"
-                android:visibility="gone">
+                android:visibility="gone"
+                app:cardElevation="4dp">
 
                 <TextView
                     android:id="@+id/textPalmOilProduct"
@@ -193,12 +192,12 @@
                 android:id="@+id/cvVitaminsTagsText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
                 android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"
-                app:cardElevation="4dp"
-                android:visibility="gone">
+                android:visibility="gone"
+                app:cardElevation="4dp">
 
                 <TextView
                     android:id="@+id/vitaminsTagsText"
@@ -219,12 +218,12 @@
                 android:id="@+id/cvMineralTagsText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
                 android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"
-                app:cardElevation="4dp"
-                android:visibility="gone">
+                android:visibility="gone"
+                app:cardElevation="4dp">
 
                 <TextView
                     android:id="@+id/mineralTagsText"
@@ -245,12 +244,12 @@
                 android:id="@+id/cvAminoAcidTagsText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
                 android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"
-                app:cardElevation="4dp"
-                android:visibility="gone">
+                android:visibility="gone"
+                app:cardElevation="4dp">
 
                 <TextView
                     android:id="@+id/aminoAcidTagsText"
@@ -271,12 +270,12 @@
                 android:id="@+id/cvOtherNutritionTags"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
                 android:layout_marginTop="8dp"
-                android:layout_marginBottom="8dp"
-                app:cardElevation="4dp"
-                android:visibility="gone">
+                android:visibility="gone"
+                app:cardElevation="4dp">
 
                 <TextView
                     android:id="@+id/otherNutritionTags"
@@ -292,6 +291,13 @@
                     android:textSize="@dimen/font_normal" />
 
             </android.support.v7.widget.CardView>
+
+            <Button
+                android:id="@+id/change_ing_img"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:text="@string/update_image" />
 
         </LinearLayout>
 
