--- a/app/src/main/res/layout/images_item.xml
+++ b/app/src/main/res/layout/images_item.xml
@@ -1,31 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout
+<LinearLayout
 
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:orientation="vertical"
     android:padding="10dp">
 
     <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/img"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:scaleType="fitCenter"
-        android:adjustViewBounds="true"/>
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:adjustViewBounds="true"
+        android:padding="4dp"
+        android:scaleType="centerCrop" />
 
     <Button
         android:id="@+id/buttonOptions"
-        android:layout_width="10dp"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
         android:layout_marginEnd="10dp"
         android:layout_marginRight="10dp"
         android:background="@android:color/transparent"
         android:gravity="center"
-        android:text="&#8942;"
-        android:textAppearance="?android:textAppearanceLarge" />
+        android:text="Edit Image"
+        android:textAppearance="?android:textAppearanceButton" />
 
 
-</RelativeLayout>
+</LinearLayout>
