--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -52,7 +52,7 @@
             android:id="@+id/tvDailyFoodFact"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Checkout the most searched food !"
+            android:visibility="gone"
             android:textColor="@color/blue"
             android:gravity="center_horizontal"
             android:padding="12dp"
