Changes done: 1. Fixed Scrolling issue in viewpager (quickview). 2. Added pause and resume camera functionality whenever bottom sheet is pulled up. 3. Improvements in quickview UI. 4. Made bottom bar(in expanded quickview) visible always.

--- a/app/src/main/res/layout/activity_continuous_scan.xml
+++ b/app/src/main/res/layout/activity_continuous_scan.xml
@@ -51,7 +51,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|center_horizontal"
-            android:layout_marginBottom="125dp"
+            android:layout_marginBottom="152dp"
             android:gravity="center_horizontal"
             android:text="@string/product_not_complete"
             android:textColor="@color/white"
@@ -216,7 +216,7 @@
                 android:text="@string/txtDialogsContent"
                 android:textSize="16sp"
                 android:visibility="gone"
-                android:layout_marginTop="@dimen/spacing_large"
+                android:layout_marginTop="@dimen/spacing_small"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
