--- a/app/src/main/res/layout/activity_continuous_scan.xml
+++ b/app/src/main/res/layout/activity_continuous_scan.xml
@@ -218,7 +218,7 @@
                 android:text="@string/txtDialogsContent"
                 android:textSize="16sp"
                 android:visibility="gone"
-                android:layout_marginTop="@dimen/spacing_large"
+                android:layout_marginTop="@dimen/spacing_small"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
