--- a/app/src/main/res/layout/fragment_summary_product.xml
+++ b/app/src/main/res/layout/fragment_summary_product.xml
@@ -87,6 +87,21 @@
                     app:layout_constraintTop_toTopOf="parent"
                     tools:src="@drawable/ic_nova_group_1" />
 
+                <!--<Button-->
+                    <!--android:id="@+id/add_nutrition_prompt"-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="0dp"-->
+                    <!--android:layout_marginBottom="@dimen/activity_horizontal_margin"-->
+                    <!--android:layout_marginTop="@dimen/activity_horizontal_margin"-->
+                    <!--android:maxWidth="180dp"-->
+                    <!--app:layout_constraintBottom_toBottomOf="parent"-->
+                    <!--app:layout_constraintEnd_toEndOf="parent"-->
+                    <!--app:layout_constraintStart_toStartOf="parent"-->
+                    <!--app:layout_constraintTop_toTopOf="parent"-->
+                    <!--android:text="Add nutrition facts to compute the Nutri-Score"-->
+                    <!--android:visibility="gone"-->
+                    <!--/>-->
+
             </android.support.constraint.ConstraintLayout>
 
             <android.support.v7.widget.CardView
@@ -376,6 +391,14 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="@dimen/spacing_tiny"
                 android:text="@string/take_more_pictures" />
+
+            <Button
+                android:id="@+id/add_nutrition_prompt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="4dp"
+                android:text="Add nutrients prompt"/>
 
 
         </LinearLayout>
