--- a/app/src/main/res/layout/activity_continuous_scan.xml
+++ b/app/src/main/res/layout/activity_continuous_scan.xml
@@ -116,7 +116,8 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/quickView_name"
                 android:layout_width="match_parent"
-                android:layout_height="100dp">
+                android:layout_height="92dp"
+                android:paddingBottom="@dimen/spacing_normal">
 
                 <ImageView
                     android:id="@+id/quickView_image"
@@ -216,7 +217,7 @@
                 android:text="@string/txtDialogsContent"
                 android:textSize="16sp"
                 android:visibility="gone"
-                android:layout_marginTop="@dimen/spacing_small"
+                android:layout_marginTop="@dimen/spacing_large"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
