--- a/app/src/main/res/layout/fragment_nutrition_product.xml
+++ b/app/src/main/res/layout/fragment_nutrition_product.xml
@@ -33,6 +33,19 @@
                 android:clickable="true"
                 android:gravity="center" />
 
+            <Button
+                android:id="@+id/get_nutriscore_prompt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginBottom="@dimen/spacing_tiny"
+                android:layout_marginLeft="@dimen/spacing_normal"
+                android:layout_marginRight="@dimen/spacing_normal"
+                android:layout_marginTop="@dimen/spacing_normal"
+                android:gravity="center"
+                android:text="@string/add_nutrient_prompt_text"
+                android:visibility="gone"/>
+
 
             <TextView
                 android:id="@+id/textCarbonFootprint"
