--- a/app/src/main/res/layout/activity_history_scan.xml
+++ b/app/src/main/res/layout/activity_history_scan.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <include layout="@layout/toolbar" />
@@ -63,6 +64,15 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:visibility="visible"/>
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/buttonScan"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end|bottom"
+            android:layout_margin="@dimen/activity_vertical_margin"
+            android:contentDescription="@string/try_it_scan_now"
+            app:srcCompat="@drawable/barcode_white_24dp" />
 
     </FrameLayout>
 
