Fixes Issue #2062: Added padding to the list in history activity

--- a/app/src/main/res/layout/activity_history_scan.xml
+++ b/app/src/main/res/layout/activity_history_scan.xml
@@ -23,6 +23,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 tools:listitem="@layout/history_list_item"
+                android:clipToPadding="false"
+                android:paddingBottom="56dp"
                 android:layout_margin="@dimen/spacing_normal" />
 
         </android.support.v4.widget.SwipeRefreshLayout>
